--- a/template/index2.html
+++ b/template/index2.html
@@ -130,6 +130,31 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
 </header>
+    <div class="container">
+    <h2>Book an appointment:</h2>
+      <label>Select Appointment Date: </label>
+      <input type="date" name="Select Appointment Date">
+      <p>To book an appointment, please select a lab:</p>
+      <input type="radio" id="lab1" name="labs" value="Dr Lal PathLabs">
+      <label for="lab1"><h4>Dr Lal PathLabs</h4></label><br>
+      <ul>
+        <li> Diagnostic Center </li>
+        <li> Contact Number: 011 3040 3214 </li>
+        <li> Address: Plot no. 60 , Sector 12, Dwarka, B School, beside Bal Bharti
+        <li><p> Website: <a href="https://www.lalpathlabs.com/" target = “_blanck”> https://www.lalpathlabs.com/ </a></p> </li>
+      </ul>
+      
+      <input type="radio" id="lab2" name="labs" value="City Xray Clinic">
+      <label for="lab1"><h4>City Xray Clinic</h4></label><br>
+      <ul>
+        <li> Diagnostic Center  </li>
+          <li> Contact Number: 011 4716 2000 </li>
+          <li> Address: A, School, Plot No, 18, Sector 12 Rd, opp. bal bharti, Dwarka, New Delhi, Delhi 110075 </li>
+          <li><p> Website: <a href="http://cityxrayclinic.com/" target = “_blanck”> http://cityxrayclinic.com/ </a></p> </li>
+      </ul>
+
+      <input type="submit" value="Book Appointment"><br><br>
+  </div>
   <footer id="main-footer">
     Made while having Coffee by Abhishek Parashar
     </footer>
