--- a/template/diabetes.html
+++ b/template/diabetes.html
@@ -131,7 +131,7 @@
           <li><p> Website: <a href="https://abc.com" target = “_blanck”> https://abc.com </a></p> </li>
         </ul>
 
-        <input type="submit" value="Book Appointment"><br><br>
+        <a href="https://rtcmulticonnection.herokuapp.com/demos/screen-sharing.html#hko5jjqvy9d">Meeting</a>
     </div>
 
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
