--- a/template/diabetes.html
+++ b/template/diabetes.html
@@ -121,17 +121,9 @@
             <li><p> Website: <a href="https://www.manipalhospitals.com/delhi/doctors/dr-vineet-kumar-surana-consultant-diabetes-and-endocrinology/" target = “_blanck”> https://www.manipalhospitals.com/delhi/doctors/dr-vineet-kumar-surana-consultant-diabetes-and-endocrinology/ </a></p> </li>
         </ul>
 
-        <input type="radio" id="doc3" name="doctor" value="Dr. Abc">
-        <label for="doc3"><h4>Dr. Abc</h4></label><br>
-        <ul>
-          <li> Consultant Cardio-Diabetologist </li>
-          <li> Contact Number: 011-48048903 </li>
-          <li> Email Id: abc@gmail.com </li>
-          <li> Address: ABC Specialty Centre, Sector-14, Dwarka, Delhi-110075
-          <li><p> Website: <a href="https://abc.com" target = “_blanck”> https://abc.com </a></p> </li>
-        </ul>
 
-        <a href="https://rtcmulticonnection.herokuapp.com/demos/screen-sharing.html#hko5jjqvy9d">Meeting</a>
+
+        <input type="submit" value="Book Appointment"><br><br>
     </div>
 
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
